[package]
name = "sawblade"
version = "0.1.0"
authors = ["Jackson Lewis <st.japa6@gmail.com>"]
description = "A modular, fast, customizable game engine that allows developers to use both Rust and Python"

[dependencies]
json = "0.11.13"
rand = "0.4"
[dependencies.sdl2]
version="0.31.0"
default-features=false
features=["image", "unsafe_textures"]